<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tabs.class.PanelEditClass">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orange"
        android:paddingBottom="70dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/headerEditClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:text="@string/editClass"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sectionEditClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/headerEditClass"
            android:layout_margin="10dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@android:color/white"
            app:startIconTint="@android:color/white"
            app:endIconTint="@android:color/holo_red_light"
            android:hint="@string/labelEnterClass"
            app:hintTextColor="@android:color/white"
            app:startIconDrawable="@drawable/catalog_classes"
            app:endIconMode="clear_text"
            app:boxStrokeWidthFocused="4dp"
            app:helperText="@string/enterClassU"
            app:helperTextTextColor="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@drawable/cursor"/>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>


