<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tabs.CatalogFilter">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal">
            <Button
                android:id="@+id/classEquipment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:textColor="@color/black"
                app:strokeColor = "@color/black"
                app:strokeWidth ="1dp"
                app:iconTint = "@color/black"
                android:text="@string/catalogClasses"
                app:icon="@drawable/catalog_classes"
                style="?attr/materialButtonOutlinedStyle"/>
            <Button
                android:id="@+id/typeEquipment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:textColor="@color/black"
                app:strokeColor = "@color/black"
                app:strokeWidth ="1dp"
                app:iconTint = "@color/black"
                android:text="@string/catalogTypes"
                app:icon="@drawable/catalog_types"
                style="?attr/materialButtonOutlinedStyle"/>

            <Button
                android:id="@+id/applyFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:textColor="@color/black"
                app:strokeColor = "@color/black"
                app:strokeWidth ="1dp"
                app:iconTint = "@color/black"
                android:text="@string/apply"
                app:icon="@drawable/filter"
                style="?attr/materialButtonOutlinedStyle"/>

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal"
            android:text="@string/description"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/sectionResEnterEquipment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/description"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resEnterClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/orange"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resEnterType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/orange"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/sectionResEnterEquipment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>

