<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tabs.equipment.PanelEditEquipment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orange"
        android:paddingBottom="70dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/headerEditEquipment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:text="@string/editEquipment"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/choose_class_equipment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/headerEditEquipment"
            android:layout_margin="10dp"
            android:text="@string/chooseClass"
            android:background="@color/black"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/choose_type_equipment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/choose_class_equipment"
            android:layout_margin="10dp"
            android:text="@string/chooseType"
            android:background="@color/black"
            android:textColor="@color/white"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sectionEditNameEquipment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/choose_type_equipment"
            android:layout_margin="10dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@android:color/white"
            app:startIconTint="@android:color/white"
            app:endIconTint="@android:color/holo_red_light"
            android:hint="@string/labelEnterNameEquipment"
            app:hintTextColor="@android:color/white"
            app:startIconDrawable="@drawable/catalog_equipments"
            app:endIconMode="clear_text"
            app:boxStrokeWidthFocused="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editNameEquipment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@drawable/cursor"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/sectionResEditEquipment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sectionEditNameEquipment"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resEditClassEquipment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resEditTypeEquipment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resEditNameEquipment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonEditEquipment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sectionResEditEquipment"
            android:layout_marginTop="20dp"
            android:text="@string/editEquipment"
            android:background="@color/black"
            android:textColor="@color/orange"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>


